tests/lean/inv_del.lean.expected.out
inv_del.lean:15:2: error: unsolved subgoals
A : Type,
P : vec A 1 → Type,
H : Π (a : A), P (vone a),
a : A
⊢ P (vone a)
inv_del.lean:15:2: error: failed to add declaration 'vec.eone' to environment, value has metavariables
  λ (A : Type) (P : vec A 1 → Type) (H : Π (a : A), P (vone a)) (v : vec A 1),
    ?M_1
